modified:   estilo.css

--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body {
-      background-color: #57a1f8;
+      background-color: #CCD5AE;
       font-family: Arial, sans-serif;
       justify-content: center;
       align-items: center;
@@ -8,7 +8,7 @@ body {
     }
 
     .button {
-      background-color: #fbb6c2;
+      background-color: #D4A373;
       color: #000;
       text-align: center;
       padding: 20px 5px;
@@ -53,7 +53,7 @@ h1 { text-align: center; color: #000; margin-bottom: 5px;}
 
 .significado {
   flex: 1;
-    background-color: #fbb6c2;
+    background-color: #D4A373;
     padding: 20px;
     border-radius: 10px;
       text-align: center;
